2007-04-12	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/Makefile.am:
	* ima/data/italc.desktop.in:
	* ima/data/italc.in:
	change paths inside these menu-files accordingly to prefix

	* ima/data/italc.xpm:
	* ima/Makefile.am:
	added XPM-file for being installed into $prefix/share/pixmaps -
	replaces PNG-file which is now installed into $prefix/share/icons

	* italc.spec.in:
	updated everything for being usable with re-developed iTALC

2007-04-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.2 release

	* build_mingw32:
	build with MMX-support per default

	* setup/src/dialogs.h:
	* setup/src/dialogs.cpp:
	* setup/src/main.cpp:
	when doing auto-install do not display information-messages concerning
	service-(un)registration

	* common/src/system_service.cpp:
	* common/include/system_service.h:
	added quiet-option for being able to supress information-messages

2007-04-04	Andriano Rino <rino_andr/at/yahoo/dot/it>

	* ica/resources/it.ts:
	* ica/resources/it.qm:
	* ima/resources/it.ts:
	* ima/resources/it.qm:
	* setup/resources/it.ts:
	* setup/resources/it.qm:
	updated Italian localization and removed obsolete translations

2007-04-03	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/resources/de.ts:
	* ica/resources/de.qm:
	updated German localization

	* setup/src/dialogs.cpp:
	- fixed typo which made key-import not working - closes #1686845
	- added "net stop icas"-call which might be neccessary when updating
	  old installations

	* ica/src/isd_server.h:
	* ica/src/isd_server.cpp:
	show messages about failed authentication via system-tray-icon

	* ica/src/ica_main.h:
	* ica/src/ica_main.cpp:
	changed several stuff concerning QSystemTray-instantiation

	* ica/src/ica_main.cpp:
	install event-filter in QCoreApplication and handle
	WM_ENDSESSION-messages for not terminating on user-logoff (which is
	the case if there was some desktop-interaction) - closes #1686921
